messed with the body and colum

--- a/Home.html
+++ b/Home.html
@@ -8,3 +8,30 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
+<body>
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>Fabian's playground</h1>
+    <p>I will do with this page as i see fit to do.</p> 
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>Green Later Oath</h3>
+      <p>In Brightest Day..In Blackest night, No evil shall escape my sight!</p>
+      <p>let those who worship evil's might..beware my power...GREEN LANTERN'S LIGHT!!</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Red Lantern's Oath</h3>
+      <p>With Blood and rage crimson red, ripped from a corpse, so freshly dead..</p>
+      <p>Together with our hellish hate..WE'LL BURN YOU ALL, THST IS YOUR FATE</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>Black Lantern's Oath</h3>        
+      <p></p>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    </div>
+  </div>
+</div>
+
+</body>
